Implemented dislpaying of characters list

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/charactersFragment"
-        android:name="com.witaless.rickandmorty.presentation.characters.CharactersFragment"
+        android:name="com.witaless.rickandmorty.presentation.ui.characters.CharactersFragment"
         android:label="fragment_characters_list"
         tools:layout="@layout/fragment_characters_list">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/characterDetailsFragment"
-        android:name="com.witaless.rickandmorty.presentation.characterdetails.CharacterDetailsFragment"
+        android:name="com.witaless.rickandmorty.presentation.ui.characterdetails.CharacterDetailsFragment"
         android:label="fragment_character_details"
         tools:layout="@layout/fragment_character_details">
         <argument
