--- a/app/src/main/res/layout/fragment_characters_list.xml
+++ b/app/src/main/res/layout/fragment_characters_list.xml
@@ -50,4 +50,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
         app:showAnimationBehavior="inward" />
+
+    <TextView
+        android:id="@+id/tv_error"
+        style="@style/TextAppearance.MaterialComponents.Caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/error_text"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/btn_try_again"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/try_again_button"
+        app:layout_constraintEnd_toEndOf="@id/tv_error"
+        app:layout_constraintStart_toStartOf="@id/tv_error"
+        app:layout_constraintTop_toBottomOf="@id/tv_error" />
 </androidx.constraintlayout.widget.ConstraintLayout>
