--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="gender_male">#42A5F5</color>
     <color name="gender_genderless">#7E57C2</color>
     <color name="gender_unknown">#939393</color>
+    <color name="placeholder">#888888</color>
 </resources>
