Fixed minor warnings, added app icon

--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -130,6 +130,7 @@
         android:layout_height="32dp"
         android:layout_margin="16dp"
         android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back_button_description"
         android:scaleType="fitXY"
         android:src="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +142,7 @@
         android:layout_height="32dp"
         android:layout_margin="16dp"
         android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/add_to_favorites_button_description"
         android:scaleType="fitXY"
         android:src="@drawable/ic_star_outline"
         app:layout_constraintEnd_toEndOf="parent"
